# splintermail-client

./: .gitignore  CMakeLists.txt  README.md  actor.c  actor.h  api_client.c  api_client.h  badbadbad.c  badbadbad_alert.c  badbadbad_alert.h  buffer_pool.c  buffer_pool.h  common.c  common.h  config.h.in  console_input.c  console_input.h  crypto.c  crypto.h  decrypt_msg.c  ditm.c  ditm.h  encrypt_msg.c  engine.c  engine.h  fileops.c  fileops.h  fixed_lengths.h  hashmap.c  hashmap.h  imap.c  imap_client.c  imap_client.h  imap_dirmgr.c  imap_dirmgr.h  imap_ditm.c  imap_ditm.h  imap_ditm_logic.c  imap_engine.c  imap_engine.h  (+104 more)
libcitm/: CMakeLists.txt  acme_manager.c  acme_manager.h  anon.c  anon.h  citm.c  citm.h  citm_engine.c  citm_engine.h  date.c  date.h  fake_citm.c  fake_citm.h  fetcher.c  fetcher.h  fpr_watcher.c  fpr_watcher.h  imap.h  imap_client.c  imap_server.c  io_pair.c  io_pair.h  keydir.c  keydir.h  keysync.c  keysync.h  libcitm.h  main.c  passthru.c  passthru.h  preuser.c  preuser.h  responses.c  responses.h  retry.c  retry.h  sc.c  sc.h  server.c  server.h  (+29 more)
libcli/: CMakeLists.txt  configure.c  configure.h  console_input.c  console_input.h  libcli.h  print_help.h.in  status.c  status.h  test_configure.c  test_status.c  ui.c  ui.h  ui_harness.c  uv_configure.c  uv_configure.h
libcrypto/: CMakeLists.txt  cmp.c  cmp.h  crypto.c  crypto.h  libcrypto.h  networking.c  networking.h  ssl_errors.c  ssl_errors.h
libditm/: CMakeLists.txt  ditm.c  ditm.h  key_tool.c  key_tool.h  libditm.h  maildir.c  maildir.h  pop_client.c  pop_client.h  pop_server.c  pop_server.h
libdstr/: CMakeLists.txt  b64.c  b64.h  common.c  common.h  cvt.c  cvt.h  dstr_off.c  fileops.c  fileops.h  fmt.c  fmt.h  hashmap.c  hashmap.h  heap.c  heap.h  jdump.c  jdump.h  json.c  json.h  jspec.c  jspec.h  jsw_atree.c  jsw_atree.h  libdstr.h  link.c  link.h  logger.c  logger.h  net.c  net.h  netops.c  netops.h  nonlast.h  opt_parse.c  opt_parse.h  refs.c  refs.h  sb.c  sb.h  (+13 more)
libduv/: CMakeLists.txt  advancer.c  advancer.h  concat.c  concat.h  connect.c  connect.h  dstr.c  dstr.h  dstr_rstream.c  dstr_rstream.h  dstr_stream.c  dstr_stream.h  fake_stream.c  fake_stream.h  libduv.h  passthru.c  passthru.h  reader.c  reader.h  root.c  root.h  scheduler.c  scheduler.h  stream.c  stream.h  test_concat.c  test_connect.c  test_dstr.c  test_dstr_rstream.c  test_passthru.c  test_reader.c  test_scheduler.c  util.c  util.h
libduvtls/: CMakeLists.txt  libduvtls.h  test_tls_client.c  test_tls_server.c  test_tls_stream.c  test_tls_verify.c  tls.c  tls.h
libhttp/: CMakeLists.txt  borrow.c  borrow.h  chunked.c  chunked.h  duv_http.c  duv_http.h  http.c  http.h  http.in  http_scan.c.in  http_scan.h  libhttp.h  limit.c  limit.h  marshal.c  marshal.h  sync.c  sync.h  test_borrow.c  test_chunked.c  test_duv_http.c  test_http_reader.c  test_limit.c  test_marshal.c  test_sync.c
libimaildir/: CMakeLists.txt  dirmgr.c  dirmgr.h  dn.c  dn.h  imaildir.c  imaildir.h  libimaildir.h  log.c  log.h  log_file.c  log_lmdb.c  msg.c  msg.h  msg_internal.h  name.c  name.h  search.c  search.h  test_dirmgr.c  up.c  up.h  util.c  util.h
libimap/: CMakeLists.txt  expression.c  expression.h  extension.c  extension.h  gen.py  gen.py.in  imap.in  imf.c  imf.h  imf.in  imf.y  imf_scan.c.in  libimap.h  math.in  math.py  meta.py  parse.c  parse.h  parse.y  read.c  read.h  scan.c  scan.h  smtp_resp.c  smtp_resp.h  smtp_resp.y  test.py  write.c  write.h
liburl/: CMakeLists.txt  liburl.h  url.c  url.h  url.in  url_scan.c.in  url_scan.h
libuvthread/: CMakeLists.txt  connect.c  connect.h  libuvthread.h  queue.c  queue.h  refs.c  refs.h  uv_util.c  uv_util.h
libweb/: CMakeLists.txt  headers.c  headers.h  http.c  http.h  libweb.h  test_headers.c  test_http_reader.c  test_url.c  test_weblink.c  url.c  url.h  web.in  web_scan.c.in  web_scan.h  weblink.c  weblink.h
server/: CMakeLists.txt  badbadbad.c  badbadbad_alert.c  badbadbad_alert.h  from.c  from.h  from.y  gc_sessions.c  keysync.c  libsmsql.c  libsmsql.h  migmysql.c  mysql_helper.c  mysql_helper.h  mysql_util.c  mysql_util.h  olt.c  pysm.c  smsql.c  xkeyadd.c  xkeysync.c
server/acme/: CMakeLists.txt  DESIGN.md  b64url.c  b64url.h  get-zerossl-eab.c  jws.c  jws.h  libacme.h  new-account.c  reqs.c  reqs.h  test_b64url.c  test_jws.c
server/dns/: CMakeLists.txt  config.h  dns.c  dns.h  libdns.h  main.c  membuf.c  membuf.h  parse.c  parse.h  rrl.c  rrl.h  test_dns.c  test_main.c  test_parse.c  test_rrl.c  test_write.c  write.c  write.h
server/kvpsend/: CMakeLists.txt  PROTOCOL  kvpsend.c  kvpsend.h  main.c  test_kvpsend.c
server/kvpsync/: CMakeLists.txt  libkvpsync.h  pkts.c  pkts.h  recv.c  recv.h  send.c  test_pkts.c  test_recv.c  test_send.c  util.c  util.h
server/libkvpsync/: CMakeLists.txt  PROTOCOL  libkvpsync.h  pkts.c  pkts.h  recv.c  send.c  send.h  test_pkts.c  test_recv.c  test_send.c  util.c  util.h
server/migrations/: 001-init.dn.sql  001-init.up.sql  003-emails-table.dn.sql  003-emails-table.up.sql  004-uuids.dn.sql  004-uuids.up  005-proc.dn.sql  005-proc.up.sql  006-pubkey-limit.dn.sql  006-pubkey-limit.up.sql  007-accounts-update.dn.sql  007-accounts-update.up.sql  008-sessions-csrf.dn.sql  008-sessions-csrf.up.sql  020-fix-to-uuid.dn.sql  020-fix-to-uuid.up.sql  030-installations.dn.sql  030-installations.up.sql
server/mysql_util/: CMakeLists.txt  binds.c  binds.h  (+2 more)
test/: CMakeLists.txt  bioconn.c  bioconn.h  certs.c  certs.h  cluster.py  ditm_thread.c  ditm_thread.h  dovecot.py  dummy_key_tool.c  dummy_key_tool.h  dummy_ui_harness.c  dummy_ui_harness.h  e2e_citm.py  enc_dec.py  fake_api_server.c  fake_api_server.h  fake_engine.c  fake_engine.h  fake_imap_client.c  fake_imap_client.h  fake_imap_logic.c  fake_imap_logic.h  fake_imap_worker.c  fake_imap_worker.h  fake_pop_server.c  fake_pop_server.h  gentestkeys.py  mariadb.py  not_before.c  proxy.py  run_imaptest.sh  test_atree.c  test_common.c  test_crypto.c  test_ditm.c  test_ditm_errors.c  test_dstr_off.c  test_fileops.c  test_fmt.c  (+39 more)
tools/: CMakeLists.txt  gen.py.in  math.in  meta.py  olt.c  test_gen.py
(+227 files in other folders)
